<resources>
    <string name="app_name">GoService</string>
    <!-- Common -->
    <string name="common_ok">確認</string>
    <string name="common_cancel">取消</string>
    <string name="common_lang_tw">繁體中文</string>
    <string name="common_lang_en">英文</string>

    <!-- Home -->
    <string name="home_status">狀態總覽</string>
    <string name="home_form_query">工單查詢</string>
    <string name="home_facility_info">設備資訊</string>
    <string name="home_historical_data">歷史數據</string>
    <string name="home_historical_alert">歷史警報</string>
    <string name="home_realtime_info">即時資訊</string>
    <string name="home_price_evaluate">電費估算</string>
    <string name="home_notification">通知</string>
    <string name="home_web">網頁版</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!-- Login -->
    <string name="login_title_account">帳號</string>
    <string name="login_title_password">密碼</string>
    <string name="login_title_lang">語言</string>
    <string name="login_button_login">登入</string>
    <string name="login_forget_password">忘記密碼</string>
    <string name="login_forget_input_message">請輸入郵件地址</string>

    <!-- Status -->
    <string name="status_facilities_title">設備清單</string>
    <string name="status_total">總數</string>
    <string name="status_start">啟動</string>
    <string name="status_stop">停機</string>
    <string name="status_offline">離線</string>
    <string name="status_abnormal">異常</string>
    <string name="status_jump_off">跳脫</string>
    <array name="status_list">
        <item>@string/status_total</item>
        <item>@string/status_start</item>
        <item>@string/status_stop</item>
        <item>@string/status_offline</item>
        <item>@string/status_abnormal</item>
        <item>@string/status_jump_off</item>
    </array>

    <!-- Notification -->
    <string name="notification_tag_to_read"><u>全部標為已讀</u></string>

    <!-- Facilities info -->
    <string name="facilities_info_effective_time">生效日期</string>
    <string name="facilities_info_warranty_time_start">保固開始</string>
    <string name="facilities_info_warranty_time_end">保固結束</string>
    <string name="facilities_info_model">型號：%s</string>
    <string name="facilities_info_area">區域：%s</string>
    <string name="facilities_info_name">別名：%s</string>
    <string name="facilities_info_engineer">設備工程師：%s</string>
    <string name="facilities_info_sort_dialog_title">選擇分類依據方式</string>
    <array name="facilities_info_sort_dialog_array">
        <item>@string/facilities_info_effective_time</item>
        <item>@string/facilities_info_warranty_time_start</item>
        <item>@string/facilities_info_warranty_time_end</item>
    </array>

    <array name="facilities_info_tab_title_array">
        <item>空壓機</item>
        <item>附掛設備</item>
    </array>

    <!-- Price Evaluate -->
    <string name="price_evaluate_query_time_default">選擇查詢時段</string>
    <string name="price_evaluate_query_currency_default">貨幣選擇</string>
    <string name="price_evaluate_running_time">運轉時數</string>
    <string name="price_evaluate_empty_car">空車 %d％</string>
    <string name="price_evaluate_full_car">重車 %d％</string>
    <string name="price_evaluate_empty_car_item">空車</string>
    <string name="price_evaluate_full_car_item">重車</string>
    <array name="price_evaluate_times">
        <item>0700~0900</item>
        <item>1000~1200</item>
        <item>1300~1500</item>
        <item>1600~1700</item>
        <item>1800~1900</item>
    </array>
    <array name="price_evaluate_coins">
        <item>TWD</item>
        <item>JP</item>
        <item>US</item>
        <item>HK</item>
        <item>NK</item>
    </array>

    <!-- Realtime Info -->
    <string name="realtime_info_basic_info">基本資料</string>
    <string name="realtime_info_engineer">設備工程師</string>
    <string name="realtime_info_facility_area">設備區域</string>
    <string name="realtime_info_facility_name">設備別名</string>
    <string name="realtime_info_facility_number">設備制號</string>
    <string name="realtime_info_model">型號</string>

</resources>
