<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/_7ssp"
    android:layout_marginTop="@dimen/_6sdp"
    android:layout_marginRight="@dimen/_7ssp"
    android:layout_marginBottom="@dimen/_6sdp"
    android:background="@drawable/rectangle_general_radius4_bg">


    <TextView
        android:id="@+id/textView_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:text="123546789"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView_line"
        android:layout_width="0dp"
        android:layout_height="@dimen/_2sdp"
        android:layout_marginTop="@dimen/_3sdp"
        android:src="@color/white30"
        app:layout_constraintEnd_toEndOf="@+id/textView_title"
        app:layout_constraintStart_toStartOf="@+id/textView_title"
        app:layout_constraintTop_toBottomOf="@+id/textView_title" />

    <TextView
        android:id="@+id/textView_description"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_7sdp"
        android:layout_marginBottom="@dimen/_13sdp"
        android:scrollbars="vertical"
        android:text="１２３４５６７"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintBottom_toTopOf="@+id/imageView_line_bottom"
        app:layout_constraintEnd_toEndOf="@+id/textView_title"
        app:layout_constraintStart_toStartOf="@+id/textView_title"
        app:layout_constraintTop_toBottomOf="@+id/imageView_line" />

    <ImageView
        android:id="@+id/imageView_line_bottom"
        android:layout_width="0dp"
        android:layout_height="@dimen/_2sdp"
        android:layout_marginTop="@dimen/_100sdp"
        android:src="@color/white30"
        app:layout_constraintEnd_toEndOf="@+id/textView_title"
        app:layout_constraintStart_toStartOf="@+id/textView_title"
        app:layout_constraintTop_toBottomOf="@+id/imageView_line" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_19sdp"
        android:text="@string/facilities_info_effective_time"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintStart_toStartOf="@+id/textView_title"
        app:layout_constraintTop_toTopOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="@dimen/_7sdp"
        android:layout_marginEnd="8dp"
        android:text="@string/facilities_info_warranty_time_start"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_line_bottom" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_19sdp"
        android:text="@string/facilities_info_warranty_time_end"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="@+id/textView_title"
        app:layout_constraintTop_toTopOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView_effective_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="2017/30/30"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintBottom_toBottomOf="@+id/textView_warranty_time_start"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/textView_warranty_time_start" />

    <TextView
        android:id="@+id/textView_warranty_time_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_4sdp"
        android:text="2017/01/07"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView_warranty_time_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="2017/01/01"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintBottom_toBottomOf="@+id/textView_warranty_time_start"
        app:layout_constraintEnd_toEndOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="@+id/textView_warranty_time_start" />

    <ImageView
        android:id="@+id/imageView_extend"
        android:layout_width="@dimen/_24sdp"
        android:layout_height="@dimen/_24sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginBottom="@dimen/_3sdp"
        android:background="@drawable/ic_arrow_down_extend"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintBottom_toTopOf="@+id/layout_extension"
        app:layout_constraintEnd_toEndOf="@+id/textView_title"
        app:layout_constraintStart_toStartOf="@+id/textView_title"
        app:layout_constraintTop_toBottomOf="@+id/textView_warranty_time_start" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/layout_extension"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView_model"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_11sdp"
            android:layout_marginTop="@dimen/_1sdp"
            android:text="@string/facilities_info_model"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView_area"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:text="@string/facilities_info_area"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintStart_toStartOf="@+id/textView_model"
            app:layout_constraintTop_toBottomOf="@+id/textView_model" />

        <TextView
            android:id="@+id/textView_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:text="@string/facilities_info_name"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintStart_toStartOf="@+id/textView_model"
            app:layout_constraintTop_toBottomOf="@+id/textView_area" />

        <TextView
            android:id="@+id/textView_engineer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:text="@string/facilities_info_engineer"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintStart_toStartOf="@+id/textView_model"
            app:layout_constraintTop_toBottomOf="@+id/textView_name" />

        <TextView
            android:id="@+id/textView_query"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_54sdp"
            android:layout_marginTop="@dimen/_9sdp"
            android:background="@drawable/rectangle_white_bottom_radius4_bg"
            android:gravity="center"
            android:text="@string/home_form_query"
            android:textColor="@color/black_text_1"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_engineer" />
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>